# Terminal-Image-Viewer

./: README.md  pyproject.toml
.github/workflows/: python-publish.yml
src/terminalImgViewer/: __init__.py  lib.py
